--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/home-bg.jpg
 email: langxian@gmail.com
 description: ""
 keyword: ""
-url: "http://huangxuan.me"              # your host, for absolute URL
+url: "https://lawrence1108.github.io/"              # your host, for absolute URL
 baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
 
 
@@ -13,10 +13,10 @@ baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
 # SNS settings
 RSS: false
 weibo_username:    eule_hana
-zhihu_username:     eule_hana
-github_username:    eule_hana
+zhihu_username:     yi-lang-xian
+github_username:    lawrence1108
 #twitter_username:  huxpro
-facebook_username:  eule_hana
+#facebook_username:  eule_hana
 
 
 
@@ -68,7 +68,7 @@ ga_domain: huangxuan.me
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "写写代码，做做设计，看看产品。世界那么大，多玩玩看看。"
+sidebar-about-description: "平常多写写代码，世界那么大，有时间多带“领导”去玩玩去看看。"
 sidebar-avatar: /img/avatar-eule.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -84,17 +84,5 @@ friends: [
     {
         title: "Leoythy Blog",
         href: "http://www.leoython.com"
-    },{
-        title: "Foo",
-        href: "#"
-    },{
-        title: "Bar",
-        href: "#"
-    },{
-        title: "Example Friends",
-        href: "#"
-    },{
-        title: "It helps SEO",
-        href: "#"
     }
 ]
