--- a/_config.yml
+++ b/_config.yml
@@ -61,8 +61,8 @@ kramdown:
 # Baidu Analytics
 ba_track_id: e357a3966b8c801a9929c9ca0e9aa14d
 # Google Analytics
-ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
-ga_domain: huangxuan.me
+ga_track_id: 'UA-99073846-1'            # Format: UA-xxxxxx-xx
+ga_domain: lawrence1108.github.io
 
 
 
